--- a/static/src/scss/_base.scss
+++ b/static/src/scss/_base.scss
@@ -8,7 +8,7 @@ html, body {
     font-size: 16px;
     line-height: 150%;
     background: $c-white;
-	overflow-x: hidden;
+	// overflow-x: hidden;
 
     @include size(100% 100%);
     @include font-feature-settings("liga", "kern");
